--- a/app/views/transports/new.html.erb
+++ b/app/views/transports/new.html.erb
@@ -12,5 +12,6 @@
         <%= f.submit "Submit list", class: "btn btn-primary" %>
       <% end %>
     </div>
+      <%= link_to "Home", root_path(@transports), class: "btn btn-primary" %><br />
   </div>
 </div>
