--- a/app/assets/stylesheets/components/_show_transport.scss
+++ b/app/assets/stylesheets/components/_show_transport.scss
@@ -1,54 +1,44 @@
-* {
-	margin: 0;
-	padding: 0;
-	// box-sizing: border-box;
+h1{
+  font-size: 24px;
+  padding-top: 2%;
 }
 .card-product {
-  // overflow: hidden;
-  // height: 400px;
   width: 100%;
-  // background: rgb(45, 58, 175);
   box-shadow: 0 0 15px rgba(217, 205, 205, 0.536);
   display: flex;
-  // justify-content:space-;
   text-align: center;
   margin: 0;
   border-radius: 12px;
 }
 
-// .card-product .card-image {
-  //   height: 100%;
-  //   width: 100%;
-  //   object-fit: cover;
-  // }
+.card-image img{
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  border: 1px solid rgba(255,255,255, 0.255);
+}
 
-  .card-image img{
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: 12px;
-    border: 1px solid rgba(255,255,255, 0.255);
-  }
+.card-product h2 {
+  font-size: 20px;
+  margin: 0;
+  line-height: 1.4;
+  opacity: 1;
+  margin: 5%;
+}
 
-  .card-product h2 {
-    font-size: 14px;
-    // font-weight: bold;
-    margin: 0;
-    line-height: 1.4;
-    opacity: 1;
-  }
+.card-product p {
+  font-size: 16px;
+  line-height: 1.4;
+  opacity: .7;
+  margin-bottom: 0;
+  margin-top: 8px;
+  width: 300px;
+  margin: 5%;
+}
 
-  .card-product p {
-    font-size: 12px;
-    line-height: 1.4;
-    opacity: .7;
-    margin-bottom: 0;
-    margin-top: 8px;
-    width: 250px;
-  }
-
-  .card-product .card-product-infos {
+.card-product .card-product-infos {
   display: flex;
   justify-content: center;
   text-align: center;
@@ -57,7 +47,3 @@
   padding: 16px;
   margin: auto;
 }
-
-// .card-product:hover {
-//   box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
-//  }
