--- a/app/views/transports/_navbar.html.erb
+++ b/app/views/transports/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
-    <a class="navbar-brand" href="http://127.0.0.1:3000/">
+    <a class="navbar-brand" href="https://keke2.herokuapp.com/">
     <img src ="https://res.cloudinary.com/dojiqdbe4/image/upload/v1677600746/diable1_wubyti.png">
 
 </a>
