--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -4,6 +4,6 @@
   <%= simple_form_for [@transport, @booking] do |f| %>
     <%= f.input :reservation_begin, as: :date, html5: true %>
     <%= f.input :reservation_end, as: :date, html5: true %>
-    <%= f.button :submit, class: "btn btn-primary"%>
+    <%= f.button :submit, class: "btn-home"%>
   <% end %>
 </div>
