--- a/app/views/transports/new.html.erb
+++ b/app/views/transports/new.html.erb
@@ -11,7 +11,11 @@
       <p><%= f.input :photos, as: :file, input_html: { multiple: true } %></p>
         <%= f.submit "Submit list", class: "btn btn-primary" %>
       <% end %>
-    </div>
-      <%= link_to "Home", root_path(@transports), class: "btn btn-primary" %><br />
+    </div class='container'>
+      <div class="row">
+        <div class="col">
+          <%= link_to "Home", root_path(@transports), class: "btn btn-warning my-3" %><br />
+        </div>
+      </div>
   </div>
 </div>
