--- a/app/assets/stylesheets/components/_show_transport.scss
+++ b/app/assets/stylesheets/components/_show_transport.scss
@@ -47,3 +47,20 @@ h1{
   padding: 16px;
   margin: auto;
 }
+
+.dashboard {
+  min-height: 80%;
+}
+
+.container1{
+  width: 50%;
+  border: 0 1px 0 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.container2{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
