--- a/app/views/transports/_navbar.html.erb
+++ b/app/views/transports/_navbar.html.erb
@@ -14,6 +14,8 @@
         <li class="nav-item active">
           <% if user_signed_in? %>
           <%= link_to "Log Out", destroy_user_session_path, data: {turbo_method: :delete}, class: 'nav-link' %></a>
+          <%= link_to "Your Bookings", bookings_path, class: 'nav-link' %></a>
+
           <% else %>
           <%=link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
           <% end %>
