--- a/app/views/transports/home.html.erb
+++ b/app/views/transports/home.html.erb
@@ -6,8 +6,8 @@
   </div>
 </div>
 
-<div class='searchbar my-3'>
-    <%= form_with url: root_path, method: :get, class: "d-flex" do %>
+<div class=''>
+    <%= form_with url: root_path, method: :get, class: 'quick my-3' do %>
       <%= text_field_tag :query,
       params[:query],
       class: "input",
