--- a/app/assets/stylesheets/components/_show_transport.scss
+++ b/app/assets/stylesheets/components/_show_transport.scss
@@ -48,19 +48,19 @@ h1{
   margin: auto;
 }
 
-.dashboard {
+.booking {
   min-height: 80%;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-column-gap: 50px;
+  justify-content: space-between;
 }
 
-.container1{
-  width: 50%;
-  border: 0 1px 0 0;
-  display: flex;
-  flex-direction: column;
-}
-
-.container2{
-  width: 50%;
-  display: flex;
-  flex-direction: column;
+.joe {
+  border-radius: 3px;
+  align-items: center;
+  box-shadow: 0 0 15px rgba(217, 205, 205, 0.536);
+  padding: 10px;
+  margin: 10px 10px 20px 10px;
 }
